[build-system]
requires = [
    "setuptools>=49.4.0",
    "cmake>=3.24",
    "cython>=0.28",
    "z3-solver",
    "graphviz"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "impure: tests use networking, foreign libs we dont bundle, certain mutable paths, global dynamic loader paths, FHS assumptions, etc (deselect with '-m \"not impure\"')",
]
